--- a/src/index.css
+++ b/src/index.css
@@ -11,10 +11,10 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
-
-header {
-  background-color: #282c34;
+  }
+  
+  header {
+    background-color: #282c34;
   min-height: 10vh;
   display: flex;
   flex-direction: column;
@@ -24,34 +24,29 @@ header {
   color: white;
 }
 
-div.card {
+ul { list-style: none;}
+
+.box { /* padrão para qualquer box que tiver bordas redondas e sombra */
   display: block;
   float:left;
-  width: 15em;
-  margin:3rem;
   padding:1rem;
   text-align: center;
+  background-color:#282c34;
+  color:#fff;
   -webkit-box-shadow: 9px 10px 15px -10px rgba(0,0,0,0.75);
   -moz-box-shadow: 9px 10px 15px -10px rgba(0,0,0,0.75);
   box-shadow: 9px 10px 15px -10px rgba(0,0,0,0.75);
   border-radius:1rem;
-  background-color:#282c34;
-  color:#fff;
+}
+
+div.card {
+  width: 15em;
+  margin:3rem;
 }
 
 div.resumeCard div.xp{
-  display: block;
-  float:right;
   width: 43rem;
   margin:3rem 2rem;
-  padding:1rem;
-  text-align: center;
-  -webkit-box-shadow: 9px 10px 15px -10px rgba(0,0,0,0.75);
-  -moz-box-shadow: 9px 10px 15px -10px rgba(0,0,0,0.75);
-  box-shadow: 9px 10px 15px -10px rgba(0,0,0,0.75);
-  border-radius:1rem;
-  background-color:#282c34;
-  color:#fff;
 }
 
 div.resumeCard h2{
@@ -62,23 +57,17 @@ div.resumeCard h2{
   box-shadow: -5px -7px 30px -10px rgba(44, 230, 255, 0.75);
   padding:1rem 0;
 }
-div.resumeCard span.period {display:block;float: right; margin:0 3rem 0rem;}
-div.resumeCard span.stacks {display:block;float: left; margin:0 2rem 1rem;;}
+div.resumeCard span {display:block;float: right;}
+div.resumeCard span.period { margin:0 3rem 0rem;}
+div.resumeCard span.stacks {margin:0 2rem 1rem;;}
 div.resumeCard div.jobDescription {
-  widht:100%;
-  display:inline-block;
   text-align:left;
   color:#282c34;
   padding:1.2em;
   margin: 0 0.3rem 2rem;
   border-radius: 0 0 2rem 0;
   background:#eee;
-  -webkit-box-shadow: 9px 10px 15px -10px rgba(0,0,0,0.75);
-  -moz-box-shadow: 9px 10px 15px -10px rgba(0,0,0,0.75);
-  box-shadow: 9px 10px 15px -10px rgba(0,0,0,0.75);
 }
-
-div.card ul { list-style: none;}
 
 div.card div.photo {
   margin: 1rem auto 1.4rem;
@@ -99,19 +88,3 @@ span.color0{background: rgba(111, 255, 111, 0.3);}
 span.color1{background: rgba(91, 91, 255, 0.3);}
 span.color2{background: rgba(255, 122, 122, 0.4);}
 span.color3{background: rgba(255, 105, 255, 0.3);}
-
-/* 
-div.json {
-  border-radius: 20px;
-  width: 100%;
-  height: 200px;
-  margin: 50 auto;
-  padding: 3rem;
-  border: 3rem solid repeating-linear-gradient(
-    -55deg,
-    #222,
-    #222 10px,
-    #282c34 10px,
-    #282c34 20px
-  );
-}  */
