--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -13,8 +14,8 @@ code {
     monospace;
   }
   
-  header {
-    background-color: #282c34;
+header {
+  background-color: #282c34;
   min-height: 10vh;
   display: flex;
   flex-direction: column;
@@ -27,8 +28,7 @@ code {
 ul { list-style: none;}
 
 .box { /* padrão para qualquer box que tiver bordas redondas e sombra */
-  display: block;
-  float:left;
+  display:block ;
   padding:1rem;
   text-align: center;
   background-color:#282c34;
@@ -39,27 +39,39 @@ ul { list-style: none;}
   border-radius:1rem;
 }
 
-div.card {
-  width: 15em;
-  margin:3rem;
+@media only screen and (orientation: portrait) or (max-width: 768px) {
+  div.card {
+    width: 15rem;
+    margin:3rem auto 3rem 100%;
+  }
 }
-
+@media (orientation: landscape) {
+  div.card {
+    max-width: calc(60% - 3rem);
+    margin:3rem auto;
+  }
+}
 div.resumeCard div.xp{
-  width: 43rem;
-  margin:3rem 2rem;
-}
+  display: block;
+  margin:3rem 1.5rem 0rem;
+} 
 
+div.resumeCard {
+  background-color: #eee;
+}
 div.resumeCard h2{
   display:inline-block;
+  text-align: center;
   width: 100%;
-  -webkit-box-shadow: -5px -7px 30px -10px rgba(44, 230, 255, 0.75);
-  -moz-box-shadow: -5px -7px 30px -10px rgba(44, 230, 255, 0.75);
-  box-shadow: -5px -7px 30px -10px rgba(44, 230, 255, 0.75);
+  border-bottom: 1px double #222;
   padding:1rem 0;
+  margin-bottom: 0;
+  color:#000;
+  font-family: 'Courier New', Courier, monospace;
 }
-div.resumeCard span {display:block;float: right;}
-div.resumeCard span.period { margin:0 3rem 0rem;}
-div.resumeCard span.stacks {margin:0 2rem 1rem;;}
+div.resumeCard div.details {display: inline-block; width:100%}
+div.resumeCard span.period { float:right; margin:1rem 0 0rem;}
+div.resumeCard span.stacks { float: left; margin:0 1.5rem 1rem;}
 div.resumeCard div.jobDescription {
   text-align:left;
   color:#282c34;
